--- a/src/components/modules/public/businessRegistration/index.scss
+++ b/src/components/modules/public/businessRegistration/index.scss
@@ -3,7 +3,12 @@
   padding-top: 40px;
   margin-top: 40px;
 
-  &__title{
+  &__title {
     margin-bottom: 24px;
   }
+}
+
+.business-thank-lists {
+  max-width: 621px;
+  margin: 0 auto;
 }
