--- a/src/components/modules/public/pricing/index.scss
+++ b/src/components/modules/public/pricing/index.scss
@@ -18,7 +18,7 @@
 
       @include mobile(811px) {
         gap: 20px;
-        padding-bottom: 60px;
+        // padding-bottom: 60px;
       }
     }
   }
