--- a/src/components/modules/ui/button/index.scss
+++ b/src/components/modules/ui/button/index.scss
@@ -27,7 +27,7 @@
       -webkit-text-fill-color: transparent;
 
       &::before {
-        background: var(--dark);
+        background: #112e6b;
         content: "";
         position: absolute;
         top: 0px;
