--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,7 +4,7 @@
 
 :root {
   --dark: #0e2557;
-  --secondary: #F2F7FF;
+  --secondary: #f2f7ff;
   --white: #ffffff;
   --text: #425669;
   --text2: #64769e;
@@ -107,6 +107,10 @@ h6 {
   }
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 ::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
@@ -180,41 +184,6 @@ h6 {
   text-align: center;
 }
 
-.options-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 24px;
-  max-width: 849px;
-  margin: 50px auto 0;
-
-  @include mobile(783px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include mobile(600px) {
-    grid-template-columns: 1fr;
-    margin: 0 auto;
-    gap: 20px;
-  }
-
-  .option {
-    border: 1px solid var(--border);
-    background: var(--white);
-    border-radius: 20px;
-    padding: 22px 31px;
-    color: var(--dark);
-    text-align: center;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    p {
-      max-width: 178px;
-    }
-  }
-}
-
 .lists {
   display: flex;
   flex-direction: column;
@@ -251,6 +220,10 @@ h6 {
         @extend .tick-icon;
         background: var(--dark);
         color: var(--white);
+
+        p {
+          color: var(--white);
+        }
       }
     }
   }
@@ -262,6 +235,8 @@ h6 {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  position: relative;
+  z-index: 1;
 }
 
 .border {
