--- a/src/components/modules/public/customiseDocument/index.scss
+++ b/src/components/modules/public/customiseDocument/index.scss
@@ -11,3 +11,15 @@
     }
   }
 }
+
+.document-thank-text {
+  margin-top: 20px;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  color: var(--text);
+  font-weight: 400;
+}
+
+.document-thank-button {
+  margin: 40px auto 60px;
+}
