--- a/src/components/modules/public/faq/index.scss
+++ b/src/components/modules/public/faq/index.scss
@@ -52,9 +52,12 @@
 .faq-topic {
   .gradient-layout__content {
     background: transparent;
+    padding: 0;
   }
 
   .app__faq__list {
     max-width: 848px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
