--- a/src/components/modules/public/home/index.scss
+++ b/src/components/modules/public/home/index.scss
@@ -98,6 +98,10 @@
         flex-direction: column;
         align-items: center;
       }
+
+      @include mobile(400px) {
+        align-items: flex-start;
+      }
     }
 
     .mobile-header {
