--- a/src/components/modules/ui/modal/index.scss
+++ b/src/components/modules/ui/modal/index.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/styles/mixins.scss";
+
 .modal {
   position: fixed;
   overflow: hidden;
@@ -23,13 +25,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 720px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   &__content {
     background: var(--white);
-    width: 720px;
+    width: 100%;
     margin: 0 auto;
     border-radius: 20px;
+    z-index: 1;
 
     &__icon {
       display: flex;
@@ -39,6 +45,10 @@
 
     &__body {
       padding: 0 48px 48px;
+
+      @include mobile(600px) {
+        padding: 0 20px 30px;
+      }
 
       &__text {
         margin: 20px 0 40px;
