--- a/src/components/modules/ui/service/index.scss
+++ b/src/components/modules/ui/service/index.scss
@@ -6,6 +6,7 @@
     display: flex;
     position: relative;
     border-radius: 20px;
+    z-index: 1;
 
     @include mobile(1171px) {
       flex-direction: column;
