--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -115,6 +115,12 @@ h6 {
   opacity: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .text {
   &--sm {
     font-size: 18px;
