--- a/src/components/modules/public/comingSoon/index.scss
+++ b/src/components/modules/public/comingSoon/index.scss
@@ -25,6 +25,14 @@
         top: 5px;
         padding: 12px 14px;
         border-radius: 10px;
+        font-size: 16px;
+        line-height: 24px;
+        background: var(--dark);
+        color: var(--white);
+
+        &:hover {
+          color: #9af0f5;
+        }
       }
     }
   }
