--- a/src/components/modules/public/login/index.scss
+++ b/src/components/modules/public/login/index.scss
@@ -45,11 +45,49 @@
       align-items: center;
       gap: 8px;
 
-      &__checkbox {
+      label {
+        position: relative;
         width: 24px;
         height: 24px;
-        border: 1px solid var(--border);
-        border-radius: 4px;
+
+        input {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          opacity: 0;
+
+          &:checked {
+            background: var(--dark);
+          }
+        }
+
+        .check {
+          display: block;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          border: 1px solid var(--border);
+          border-radius: 4px;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          &.active {
+            background: var(--dark);
+
+            .check-tick {
+              display: block;
+              width: 14px;
+              height: 14px;
+              color: #fff;
+            }
+          }
+
+          .check-tick {
+            display: none;
+          }
+        }
       }
     }
 
