--- a/src/components/modules/public/navbar/index.scss
+++ b/src/components/modules/public/navbar/index.scss
@@ -150,8 +150,12 @@
           border-radius: 100vh;
           width: 48px;
           height: 48px;
-          border: 1px solid var(--dark);
+          background-color: var(--dark);
           cursor: pointer;
+
+          h5 {
+            color: var(--white);
+          }
         }
 
         .nav-dropdown {
