--- a/src/components/modules/public/navbar/index.scss
+++ b/src/components/modules/public/navbar/index.scss
@@ -142,20 +142,27 @@
 
       .user-container {
         position: relative;
+        z-index: 5;
 
         .user {
           display: flex;
           align-items: center;
-          justify-content: center;
-          border-radius: 100vh;
-          width: 48px;
-          height: 48px;
-          background-color: var(--dark);
+          gap: 6px;
+          // justify-content: center;
+          // border-radius: 100vh;
+          // width: 48px;
+          // height: 48px;
+          // background-color: var(--dark);
           cursor: pointer;
 
-          h5 {
-            color: var(--white);
-            font-family: "Inter", sans-serif;
+          &__icon {
+            width: 28px;
+            height: 28px;
+          }
+
+          p {
+            font-weight: 500;
+            color: var(--dark);
           }
         }
 
