--- a/src/components/modules/ui/offer/index.scss
+++ b/src/components/modules/ui/offer/index.scss
@@ -74,6 +74,12 @@
     margin-bottom: 30px;
     font-weight: 500;
 
+    span {
+      color: var(--dark);
+      font-weight: 600;
+      font-family: "PT Serif", serif;
+    }
+
     @include mobile(600px) {
       margin-top: 16px;
       margin-bottom: 28px;
