--- a/src/components/modules/public/pricing/index.scss
+++ b/src/components/modules/public/pricing/index.scss
@@ -9,7 +9,7 @@
     &__content {
       display: flex;
       gap: 48px;
-      // padding-bottom: 90px;
+      padding-bottom: 90px;
 
       @include mobile(1189px) {
         flex-wrap: wrap;
