--- a/src/components/modules/public/home/index.scss
+++ b/src/components/modules/public/home/index.scss
@@ -1,4 +1,4 @@
-@import "../../../../assets/styles/mixins.scss";
+@import '../../../../assets/styles/mixins.scss';
 
 .home {
   &__hero {
@@ -27,7 +27,7 @@
           max-width: 612px;
           margin: 27px 0 40px;
           font-weight: 400;
-          font-family: "Inter", sans-serif;
+          font-family: 'Inter', sans-serif;
           color: var(--text);
 
           @include mobile(600px) {
