--- a/src/components/modules/public/customise/index.scss
+++ b/src/components/modules/public/customise/index.scss
@@ -26,6 +26,11 @@
     }
   }
 
+  &__category {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
   &__search {
     padding-top: 92px;
     padding-bottom: 90px;
