--- a/src/components/modules/public/businessReservation/index.scss
+++ b/src/components/modules/public/businessReservation/index.scss
@@ -12,3 +12,89 @@
   max-width: 621px;
   margin: 0 auto;
 }
+
+@media screen and (min-width: 1024px){
+  .user--information{
+      width: calc(70% - 5rem);
+  } 
+}
+
+@media screen and (max-width: 1025px){
+  .user--information{
+      width: calc(85% - 5rem);
+  }
+}
+
+@media screen and (max-width: 480px){
+  .user--information{
+      width: calc(100% - 2.5rem);
+  }
+}
+
+
+$userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
+
+.user--content{
+  width: 100%;
+  min-height: 100vh;
+  background: $userInfoBcg;
+  padding: 20px 0px 0px 0px;
+
+ 
+
+  .user--information--content{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 100px 0px 100px 0px;
+
+      
+  .user--information{
+      padding: 50px 30px;
+      //width: calc(70% - 5rem);
+      border-radius: 7px;
+      height: auto;
+      background: rgba(255, 255, 255, 1);
+
+      .detail--header{
+          font-size: 34px;
+          font-weight: 700;
+      }
+
+      .user--advice{
+          margin: 20px 0px;
+          color: var(--Dark-grey, rgba(66, 86, 105, 1));
+
+      }
+
+      .user--details{
+
+          .user--input{
+              margin: 0px 0px 25px 0px;
+          }
+
+          .user--submit--button{
+              width: 100%;
+          }
+
+          .or--option--container{
+              margin: 15px 0px;
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+
+              .line{
+                  width: 45%;
+                  height: 1px;
+                  background: rgba(215, 228, 255, 1);
+              }
+          }
+      }
+  }
+  }
+  
+}
+
+
