--- a/src/components/modules/public/businessRegistration/index.scss
+++ b/src/components/modules/public/businessRegistration/index.scss
@@ -15,6 +15,110 @@
 
 $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
 
+//Responsive widths
+@media screen and (min-width: 1024px){
+    
+    .double--input{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        flex: 0 0 auto;
+
+        .user--input{
+            width: 45%;
+        }
+
+        .select{
+            width: 45%;
+        }
+    }
+
+    .triple--input{
+        display: flex;
+        justify-content: space-between;
+
+        .user--input{
+            width: 32%;
+        }
+
+        .select{
+            width: 31.5%;
+        }
+    }
+
+    .business--information--form{
+        width: calc(70% - 5rem);
+    }
+
+    .business--summary{
+        width: calc(70% - 5rem);
+    }
+
+    .business--information--header{
+        font-size: 36px;
+    }
+
+    .button--container{
+        width: calc(70% - 5rem);
+    }
+
+    .base-button--inverted, .base-button--primary {
+        padding: 10px 50px;
+    }
+}
+
+@media screen and (max-width: 1025px){
+    .business--information--form{
+        width: calc(85% - 5rem);
+    }
+
+    .business--summary{
+        width: calc(85% - 5rem);
+    }
+
+    .business--information--header{
+        font-size: 20px;
+    }
+
+    .button--container{
+        width: calc(85% - 5rem);
+    }
+}
+
+@media screen and (min-width: 720px) and (max-width: 1440px){
+    .base-button--inverted, .base-button--primary {
+        padding: 10px 50px;
+    }
+
+    .requirement{
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .business--information--form{
+        width: calc(100% - 2.5rem);
+    }
+
+    .business--summary{
+        width: calc(100% - 2.5rem);
+    }
+
+    .button--container{
+        width: calc(100% - 2.5rem);
+    }
+
+}
+
+@media screen and (max-width: 720px){
+    .requirement{
+        width: 100%;
+    }
+}
+
+
+///////////////////////////////////////
+
 .business--information--container{
     padding: 20px 0px 0px 0px;
     background: $userInfoBcg;
@@ -29,14 +133,14 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
         flex-direction: column;
 
         .business--information--header{
-            font-size: 36px;
+            //font-size: 36px;
             font-weight: 700;
-            margin: 0px 0px 10px 0px;
+            margin: 0px 0px 25px 0px;
         }
 
         .business--summary{
             background: rgba(255, 255, 255, 1);
-            width: calc(70% - 5rem);
+            //width: calc(70% - 5rem);
             padding: 20px 30px;
             margin: 0px 0px 25px 0px;
         }
@@ -46,7 +150,7 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
             border-radius: 7px;
             height: auto;
             background: rgba(255, 255, 255, 1);
-            width: calc(70% - 5rem);
+            //width: calc(70% - 5rem);
             border: 2px solid rgba(240, 236, 245, 1);
 
             .summary--header{
@@ -61,6 +165,7 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
                 margin: 0px 0px 10px 0px;
                 padding: 10px;
                 color: rgba(188, 198, 204);
+                font-weight: 500;
                 border-bottom: 1.5px solid rgba(188, 198, 204, 0.15);
                 display: flex;
                 justify-content: space-between;
@@ -79,9 +184,21 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
                 color: rgba(161, 139, 0, 1);
                 font-size: 14px;
                 background: rgba(161, 139, 0, 0.05);
-                padding: 10px 10px;
+                padding: 20px 10px;
                 margin: 0px 0px 25px 0px;
                 line-height: 30px;
+
+                .reserve--button{
+                    //background: rgba(0, 184, 191, 1);
+                    color: #fff;
+                    padding: 10px 40px;
+                    font-size: 14px;
+                    border-radius: 5px;
+                    width: fit-content;
+                    margin: 20px 0px 0px 0px;
+                    background: rgba(161, 139, 0, 1);
+
+                }
             }
 
             .business--text--area{
@@ -91,8 +208,9 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
                 width: 50%;
                 border: 1px solid rgba(188, 198, 204, 0.15);
                 font-size: 14px;
-                padding: 20px;
+                padding: 50px 25px;
                 resize: none;
+                width: 100%;
             }
 
             .requirement--content{
@@ -101,7 +219,7 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
                 justify-content: space-between;
 
                 .requirement{
-                    width: 48%;
+                 
                     padding: 10px;
                     margin: 0px 0px 20px 0px;
                 
@@ -119,37 +237,14 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
                         font-size: 14px;
                         text-decoration: underline;
                     }
+
+                    input.hidden--input{
+                        display: none;
+                    }
                 }
             }
 
 
-            .double--input{
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                flex: 0 0 auto;
-
-                .user--input{
-                    width: 45%;
-                }
-
-                .select{
-                    width: 45%;
-                }
-            }
-
-            .triple--input{
-                display: flex;
-                justify-content: space-between;
-
-                .user--input{
-                    width: 32%;
-                }
-
-                .select{
-                    width: 31.5%;
-                }
-            }
 
             .user--input{
                 margin: 0px 0px 30px 0px;
@@ -180,7 +275,7 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
                 font-size: 14px;
                 border-radius: 5px;
                 width: fit-content;
-
+                margin: 20px 0px 0px 0px;
             }
 
           
@@ -198,22 +293,28 @@ $userInfoBcg: linear-gradient(265.33deg, #D6F5FC 16.76%, #E6FAF4 104.26%);
   
     }
 
-          .bottom--buttons{
-            display: flex;
-            margin: 20px 0px 20px 0px;
-            width: calc(55% - 5rem);
+         .button--container{
+            //width: calc(70% - 5rem);
             //background: pink;
-            margin-left:  auto;
-            
-            .base-button--inverted, .base-button--primary {
-                border-radius: 7px;
-                padding: 10px 50px;
-            }
+            margin: 0 auto;
 
-            .save--button{
-                margin: 0px 0px 0px 10px;
+            .bottom--buttons{
+                display: flex;
+                margin: 20px 0px 20px 0px;
+                width: 100%;
+                //background: pink;
+                justify-content: right;
+                
+                .base-button--inverted, .base-button--primary {
+                    border-radius: 7px;
+                    //padding: 10px 50px;
+                }
+    
+                .save--button{
+                    margin: 0px 0px 0px 10px;
+                }
             }
-        }
+         }
 }
 
 .mb{
