--- a/src/components/modules/admin/layout/index.scss
+++ b/src/components/modules/admin/layout/index.scss
@@ -12,31 +12,21 @@
   overflow: hidden; /* Hide any overflow content */
 }
 
-
-// .header {
-//   position: absolute; /* Fixed position to keep it at the top */
-//   top: 0; /* Align it to the top of the viewport */
-//   right: 0; /* Align it to the left of the viewport */
-//   width: 80%; /* Take the full width */
-//   background-color: #ffffff;
-//   z-index: 10;
-// }
-
-
 // Navigation Sidebar
 .nav {
- 
   display: flex;
- 
+
   flex: 0 0 19%; /* Adjusted flex properties */
   background-color: #f0f0f0; /* Optional: Add a background color */
 }
 
 // Main Content Area
 .content {
-  flex: 1;
-//   padding: 48px; /* Adjusted padding */
-//   overflow-y: auto;
+  flex: 2;
+  overflow: scroll;
+
+  //   padding: 48px; /* Adjusted padding */
+  //   overflow-y: auto;
 }
 // @media (min-width: 768px) {
 //   .content {
