--- a/src/components/modules/admin/sidebar/index.scss
+++ b/src/components/modules/admin/sidebar/index.scss
@@ -6,7 +6,7 @@ $border-buttom-color: #f4f4f6;
   font-size: 14px;
   margin-top: 16px;
   color: $sidebar-links-color;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .sidebar {
@@ -30,6 +30,9 @@ $border-buttom-color: #f4f4f6;
     height: 60vh;
 
     .first-navlinks {
+      padding-top: 1rem 0;
+      padding-bottom: 1.2rem;
+      margin-bottom: 0.8rem;
       border-bottom: 1px solid $border-buttom-color;
       ul {
         li {
@@ -41,6 +44,7 @@ $border-buttom-color: #f4f4f6;
     .second-navlinks {
       .heading-text {
         color: $sidebar-links-color;
+        font-weight: 7200;
         //font-family: $main-font-family;
         margin: 0 -1rem;
         padding-top: 0.3rem;
