--- a/src/components/modules/admin/sidebar/index.scss
+++ b/src/components/modules/admin/sidebar/index.scss
@@ -1,6 +1,23 @@
 $sidebar-links-color: #425669;
 $main-font-family: Inter, sans-serif;
 $border-buttom-color: #f4f4f6;
+$navbar-background-color: white;
+$sidebar-padding: 16px 3rem;
+
+%sidebar-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+%sidebar-border {
+  border: 2px solid $border-buttom-color;
+  border-radius: 0.5rem;
+}
+
+%nav-cont-styles {
+  background-color: $navbar-background-color;
+  padding: $sidebar-padding;
+}
 
 %navlink-styles {
   font-size: 14px;
@@ -12,22 +29,23 @@ $border-buttom-color: #f4f4f6;
 .sidebar {
   background-color: #f9f9f9;
   //color: #ecf0f1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @extend %sidebar-flex;
+
   width: 100%;
 
   .logo {
     background-color: #ffffff;
-    padding: 16px 32px;
+    padding: $sidebar-padding;
     margin-top: 24px;
+    @extend %sidebar-border;
   }
 
   .navlinks {
     background-color: #ffffff;
-    padding: 16px 32px;
+    padding: 16px 3rem;
     margin-top: 16px;
     height: 60vh;
+    @extend %sidebar-border;
 
     .first-navlinks {
       padding-top: 1rem 0;
@@ -58,6 +76,21 @@ $border-buttom-color: #f4f4f6;
           }
         }
       }
+    }
+  }
+  .sidebar-profile {
+    @extend %nav-cont-styles;
+    @extend %sidebar-border;
+    @extend %sidebar-flex;
+
+    margin-top: 2rem;
+    //width: inherit;
+    // padding: $sidebar-padding;
+
+    //display: flex;
+    ///align-items: space-between;
+    justify-content: space-between;
+    &name {
     }
   }
 }
