--- a/src/components/modules/ui/statisticsCard/StatisticsCard.scss
+++ b/src/components/modules/ui/statisticsCard/StatisticsCard.scss
@@ -4,7 +4,7 @@
 
   .statistics-card {
     display: flex;
-    
+
     //   flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -21,12 +21,10 @@
       width: 100%;
       height: 100%;
       background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 0.8rem;
       padding: 20px;
       margin-right: 10px;
       transition: all 0.3s;
     }
   }
 }
- 
