--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -135,6 +135,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     border: 1px solid #f6f6f6;
     min-height: 100vh;
     margin: 0 auto;
