--- a/src/components/modules/admin/templatesAll/index.scss
+++ b/src/components/modules/admin/templatesAll/index.scss
@@ -39,6 +39,14 @@
 
     td {
       @extend %table-data-styles;
+      .downloads {
+      }
+    }
+
+    tr {
+      .downloads {
+        padding-left: 3rem;
+      }
     }
 
     tr:nth-child(odd) {
