--- a/src/components/modules/admin/sidebar/index.scss
+++ b/src/components/modules/admin/sidebar/index.scss
@@ -47,32 +47,36 @@ $sidebar-padding: 16px 3rem;
     height: 60vh;
     @extend %sidebar-border;
 
-    .first-navlinks {
-      padding-top: 1rem 0;
-      padding-bottom: 1.2rem;
-      margin-bottom: 0.8rem;
-      border-bottom: 1px solid $border-buttom-color;
-      ul {
-        li {
-          @extend %navlink-styles;
+    .links-container {
+      align-items: left;
+      justify-content: flex-start;
+      .first-navlinks {
+        padding-top: 1rem 0;
+        padding-bottom: 1.2rem;
+        margin-bottom: 0.8rem;
+        border-bottom: 1px solid $border-buttom-color;
+        ul {
+          li {
+            @extend %navlink-styles;
+          }
         }
       }
-    }
 
-    .second-navlinks {
-      .heading-text {
-        color: $sidebar-links-color;
-        font-weight: 7200;
-        //font-family: $main-font-family;
-        margin: 0 -1rem;
-        padding-top: 0.3rem;
-      }
+      .second-navlinks {
+        .heading-text {
+          color: $sidebar-links-color;
+          font-weight: 7200;
+          //font-family: $main-font-family;
+          margin: 0 -1rem;
+          padding-top: 0.3rem;
+        }
 
-      ul {
-        li {
-          @extend %navlink-styles;
-          .sidebar-icon {
-            margin-top: 2rem;
+        ul {
+          li {
+            @extend %navlink-styles;
+            .sidebar-icon {
+              margin-top: 2rem;
+            }
           }
         }
       }
@@ -85,12 +89,13 @@ $sidebar-padding: 16px 3rem;
 
     margin-top: 2rem;
     //width: inherit;
-    // padding: $sidebar-padding;
-
-    //display: flex;
+    padding: $sidebar-padding;
+    max-width: 15.2rem;
+    flex-direction: row;
     ///align-items: space-between;
-    justify-content: space-between;
-    &name {
+    // justify-content: space-between;
+    .name {
+      padding: 0 rem;
     }
   }
 }
