--- a/src/components/modules/admin/businessCardDetails/index.scss
+++ b/src/components/modules/admin/businessCardDetails/index.scss
@@ -39,6 +39,10 @@
 
         p {
           margin: 0.5rem 0;
+          strong {
+            display: inline-block;
+            width: 150px; /* adjust width as needed for alignment */
+          }
         }
       }
     }
