--- a/src/components/modules/admin/layout/sidebar/index.scss
+++ b/src/components/modules/admin/layout/sidebar/index.scss
@@ -3,6 +3,7 @@ $main-font-family: Inter, sans-serif;
 $border-buttom-color: #f4f4f6;
 $navbar-background-color: white;
 $sidebar-padding: 16px 3rem;
+$navlink-bg: #0e2557;
 
 %sidebar-flex {
   display: flex;
@@ -31,6 +32,20 @@ $sidebar-padding: 16px 3rem;
   //color: #ecf0f1;
   @extend %sidebar-flex;
 
+  .admin-panel {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 2rem;
+
+    .admin-panel-links {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
   width: 100%;
 
   .logo {
@@ -41,8 +56,9 @@ $sidebar-padding: 16px 3rem;
   }
 
   .navlinks {
+    flex: 1;
     background-color: #ffffff;
-    padding: 16px 3rem;
+
     margin-top: 16px;
     height: 60vh;
     @extend %sidebar-border;
@@ -51,32 +67,56 @@ $sidebar-padding: 16px 3rem;
       align-items: left;
       justify-content: flex-start;
       .first-navlinks {
+        padding: 2rem;
+        width: 100%;
         padding-top: 1rem 0;
         padding-bottom: 1.2rem;
         margin-bottom: 0.8rem;
         border-bottom: 1px solid $border-buttom-color;
         ul {
-          li {
-            @extend %navlink-styles;
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          a {
+            display: flex;
+            gap: 0.5rem;
+            align-items: center;
+            padding: 0.7rem 0.5rem;
+            border-radius: 6px;
+          }
+
+          a:hover,
+          a.active {
+            background-color: $navlink-bg;
+            color: white;
           }
         }
       }
 
       .second-navlinks {
+        padding: 0 2rem;
         .heading-text {
           color: $sidebar-links-color;
-          font-weight: 7200;
-          //font-family: $main-font-family;
-          margin: 0 -1rem;
-          padding-top: 0.3rem;
+          font-weight: 700;
+          font-family: $main-font-family;
+          font-size: 1rem;
         }
 
         ul {
-          li {
-            @extend %navlink-styles;
-            .sidebar-icon {
-              margin-top: 2rem;
-            }
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          a {
+            display: flex;
+            gap: 0.5rem;
+            align-items: center;
+            padding: 0.7rem 0.5rem;
+            border-radius: 6px;
+          }
+          a:hover,
+          a.active {
+            background-color: $navlink-bg;
+            color: white;
           }
         }
       }
